<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">CPU-Z</string>
    <string name="title_page1">SoC</string>
    <string name="title_page2">Device</string>
    <string name="title_page3">System</string>
    <string name="title_page4">Battery</string>
    <string name="title_page5">Thermal</string>
    <string name="title_page6">Sensors</string>
    <string name="title_page7">About</string>
    <string name="menu_close">Close</string>
    <string name="about_text_2">for Android</string>
    <string name="about_version">Version</string>
    <string name="about_text_1">"CPUID CPU-Z is a free software.

"</string>
    <string name="about_URL">CPUID Web Page</string>
    <string name="about_URL_2">Validation Web Page</string>
    <string name="about_send_dump">Send Debug Infos</string>
    <string name="validate">Online Validation</string>
    <string name="setting_title">CPU-Z Settings</string>
    <string name="setting_faq">Help and FAQ</string>
    <string name="setting_removeads">Remove Ads</string>
    <string name="setting_temperature">Temperature Unit</string>
    <string name="setting_features">Features</string>
    <string name="chk_GPU">GPU</string>
    <string name="chk_CPULoad">CPU Load</string>
    <string name="chk_Sensors">Sensors</string>
    <string name="chk_BatteryExt">Battery Capacity</string>
    <string name="setting_save">Save</string>
    <string name="setting_cancel">Cancel</string>
    <string name="temperature_celsius">Celsius</string>
    <string name="temperature_fahrenheit">Fahrenheit</string>
    <string name="copyright">Copyright © 2019 - CPUID - All Rights Reserved</string>
    <string name="mod_info">Modded by <i>@alissonlauffer</i></string>
</resources>
