<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/settings" android:id="@id/menu_settings" android:orderInCategory="100" android:title="@string/setting_title" />
    <item android:id="@id/menu_validation" android:orderInCategory="100" android:title="@string/validate" />
    <item android:id="@id/menu_validation_2" android:orderInCategory="100" android:title="@string/validate" />
    <item android:id="@id/menu_debug" android:orderInCategory="100" android:title="@string/about_send_dump" />
    <item android:id="@id/menu_removeads" android:orderInCategory="100" android:title="@string/setting_removeads" />
    <item android:id="@id/menu_close" android:orderInCategory="100" android:title="@string/menu_close" />
</menu>