<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/mauve" android:id="@id/about_title" android:paddingTop="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:textStyle="bold" android:id="@id/about_text_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_text_2" android:layout_below="@id/about_title" android:layout_centerHorizontal="true" />
    <TextView android:textStyle="bold" android:id="@id/about_version" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version" android:layout_below="@id/about_text_2" android:layout_centerHorizontal="true" />
    <TextView android:id="@id/about_text_1" android:paddingLeft="15.0sp" android:paddingTop="5.0sp" android:paddingRight="15.0sp" android:paddingBottom="10.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_text_1" android:layout_below="@id/about_version" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:id="@id/about_validate" android:layout_width="250.0sp" android:layout_height="50.0sp" android:layout_marginBottom="10.0sp" android:text="@string/validate" android:layout_below="@id/about_text_1" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <Button android:id="@id/about_setting" android:layout_width="250.0sp" android:layout_height="50.0sp" android:layout_marginBottom="10.0sp" android:text="@string/setting_title" android:layout_below="@id/about_validate" android:layout_centerHorizontal="true" />
        <Button android:id="@id/about_faq" android:layout_width="250.0sp" android:layout_height="50.0sp" android:text="@string/setting_faq" android:layout_below="@id/about_setting" android:layout_centerHorizontal="true" />
        <Button android:id="@id/about_removeads" android:layout_width="0.0sp" android:layout_height="0.0sp" android:text="@string/setting_removeads" android:layout_below="@id/about_faq" android:layout_centerHorizontal="true" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/about_removeads">
        <TextView android:textColorLink="@color/darkblue" android:id="@id/about_URL" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_URL" android:layout_centerHorizontal="true" />
        <TextView android:textColorLink="@color/darkblue" android:id="@id/about_URL_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_URL_2" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/darkgrey" android:id="@id/about_copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copyright" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/darkgrey" android:paddingBottom="3.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mod_info" android:layout_centerHorizontal="true" />
    </LinearLayout>
</RelativeLayout>